# price_tracer

./: .gitignore  pyproject.toml
app/src/: log.py  main.py
app/src/db/: base.py  connection.py
app/src/job/: job.py
app/src/model/: instrument.py
app/src/repository/: instrument_repository.py
app/src/routes/: instruments_router.py
app/src/scheduler/: life_span.py
app/src/static/: index.css  index.html  index.js
infra/postgres/: .env  docker-compose.yml
infra/postgres/init/: init-db.sql
scripts/: dev-app.sh  fetch_prices.py  start-app.sh  start-jupyter.sh  start-postgres.sh
